# wrap-cl

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
include/: clcore.h  clcore.hpp  clkernel.h  clkernel.hpp  clmemory.h  clmemory.hpp
include/kernels/: activations.cl  add_biasses.cl  avgpool.cl  levels_image_forward.cl  maxpool.cl  shortcut.cl  softmax.cl
src/: clcore.cpp  clkernel.cpp  clmemory.cpp  main.cpp
src/kernels/: activation_forward.cl  col2im.cl  crop.cl  im2col.cl  upsample.cl
