cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
set(CMAKE_BUILD_TYPE "Release" CACHE STRING "default build type")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(wrap-cl VERSION 0.1 LANGUAGES C CXX)
find_package(OpenCL REQUIRED)
include_directories(${OpenCL_INCLUDE_DIR})
include_directories(include)
set(PUBLIC_HEADERS include/*)
add_library(wrap-cl src/clcore.cpp src/clkernel.cpp src/clmemory.cpp)
target_link_libraries(OpenCL::OpenCL)
target_include_directories(wrap-cl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
set_target_properties(wrap-cl PROPERTIES PUBLIC_HEADER "${PUBLIC_HEADERS}")