cmake_minimum_required(VERSION 3.6 FATAL_ERROR)
set(CMAKE_BUILD_TYPE "Release" CACHE STRING "default build type")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(wrap-cl VERSION 0.1 LANGUAGES C CXX)
find_package(OpenCL REQUIRED)
include_directories(${OpenCL_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_library(wrap-cl SHARED src/clcore.cpp src/clkernel.cpp src/clmemory.cpp)
target_link_libraries(wrap-cl OpenCL::OpenCL)
target_include_directories(wrap-cl INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)